--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
+    "@nextui-org/react": "^1.0.0-beta.10",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-pro-sidebar": "^1.0.0-alpha.7",
     "sass": "^1.55.0"
   },
   "devDependencies": {
