--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@fontsource/roboto": "^4.5.8",
     "@nextui-org/react": "^1.0.0-beta.10",
+    "axios": "^1.1.3",
     "next": "13.0.0",
+    "next-auth": "^4.15.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
