--- a/package.json
+++ b/package.json
@@ -9,24 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fontsource/roboto": "^4.5.8",
     "@nextui-org/react": "^1.0.0-beta.10",
     "axios": "^1.1.3",
+    "cookies-next": "^2.1.1",
+    "moment": "^2.29.4",
     "next": "13.0.0",
-    "next-auth": "^4.15.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-facebook-login": "^4.1.1",
     "react-icons": "^4.6.0",
+    "react-infinite-scroller": "^1.2.6",
+    "react-instagram-oauth": "^0.0.3",
     "react-pro-sidebar": "^1.0.0-alpha.7",
-    "sass": "^1.55.0"
+    "recoil": "^0.7.6",
+    "sass": "^1.55.0",
+    "twitter-api-v2": "^1.12.9"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
     "babel-loader": "^8.2.5",
     "eslint": "^8.26.0",
     "eslint-config-next": "13.0.0",
-    "eslint-plugin-storybook": "^0.6.6"
+    "eslint-plugin-react-hooks": "^4.6.0"
   },
   "eslintConfig": {
     "extends": [
