--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.6.0",
     "react-infinite-scroller": "^1.2.6",
     "react-instagram-oauth": "^0.0.3",
+    "react-player": "^2.11.0",
     "react-pro-sidebar": "^1.0.0-alpha.7",
     "react-reveal": "^1.2.2",
     "recoil": "^0.7.6",
